  * xdrlib has been ported to cython. (Issue #441)
  * util.NamedStream no longer inherits from basestring (Issue #649)
  * Short TRZ titles are striped from trailing spaces. A friendlier error
    message is raised when the TRZ writer is asked to write a title longer
    than 80 characters. (Issue #689)
  * PDB doesn't save charge information anymore

Fixes

  * XDR file seeking and telling working again for large files (Issue #677).
  * ContactAnalysis1 run method now starts at frame index 0 by deafult (Issue #624)
  * Fixed PrimitivePDBWriter getting atom type column shifted to the right
    (Issue #639)
  * The 'atom' selection keyword returns an empty selection rather than an
    error when no atoms are are found. (Issue #644)
  * nucleic selection will now detect nucleic residue names suffixed with 3 or 5
    (Issue #461)
  * Fixed Reader returning all frames with stop in slice was 0 (Issue #672)
  * Fixed NCDFReader not reading dt (Issue #676)
  * Fixed PDB-Topology read bonds for atom ids larger then 10000 (Issue #693)
  * Fixed Type Error in qcprot.pyx when no rotation can be fond (Issue #705)
  * Fixed cyzone selection failing in orthogonal systems (Issue #710)


01/16/16 tyler.je.reddy, kain88-de, richardjgowers, manuel.nuno.melo,
         orbeckst, Balasubra

  * 0.13.0

API Changes

  * ChainReader `delta` keyword deprecated in favor of `dt`. (Issue #522)
  * XYZWriter can now be used as a container format for different protein models
    as well as a normal trajectory. If `n_atoms` is None (default) MDAnalysis
    assumes that it is used as a container and won't give a warning if the
    number of atoms differs between frames.
  * GROWriter.fmt strings updated to use format style (Issue #494)
  * removed MDAnalysis.lib.parallel.distances; use the new backend="OpenMP"
    keyword for the functions in MDAnalysis.lib.distances (Issue #530)

Enhancement

  * ChainReader now reports times properly summed over sub-readers (Issue #522)